# python/mzcloud/api/deployments/deployments_destroy.py
@@ -6,29 +6,15 @@ from ...client import AuthenticatedClient, Client
 from ...types import Response, UNSET
 
 
-
-
 def _get_kwargs(
     *,
     client: AuthenticatedClient,
     id: str,
-
 ) -> Dict[str, Any]:
-    url = "{}/api/deployments/{id}".format(
-        client.base_url,id=id)
+    url = "{}/api/deployments/{id}".format(client.base_url, id=id)
 
     headers: Dict[str, Any] = client.get_headers()
     cookies: Dict[str, Any] = client.get_cookies()
-
-    
-
-    
-
-    
-
-    
-
-    
 
     return {
         "url": url,
@@ -36,8 +22,6 @@ def _get_kwargs(
         "cookies": cookies,
         "timeout": client.get_timeout(),
     }
-
-
 
 
 def _build_response(*, response: httpx.Response) -> Response[Any]:
@@ -53,12 +37,10 @@ def sync_detailed(
     *,
     client: AuthenticatedClient,
     id: str,
-
 ) -> Response[Any]:
     kwargs = _get_kwargs(
         client=client,
-id=id,
-
+        id=id,
     )
 
     response = httpx.delete(
@@ -72,18 +54,13 @@ async def asyncio_detailed(
     *,
     client: AuthenticatedClient,
     id: str,
-
 ) -> Response[Any]:
     kwargs = _get_kwargs(
         client=client,
-id=id,
-
+        id=id,
     )
 
     async with httpx.AsyncClient() as _client:
-        response = await _client.delete(
-            **kwargs
-        )
+        response = await _client.delete(**kwargs)
 
     return _build_response(response=response)
-
