# rust/src/models/deployment_request.rs
@@ -25,6 +25,10 @@ pub struct DeploymentRequest {
     pub materialized_extra_args: Option<Vec<String>>,
     #[serde(rename = "mzVersion", skip_serializing_if = "Option::is_none")]
     pub mz_version: Option<String>,
+    #[serde(rename = "enableTailscale", skip_serializing_if = "Option::is_none")]
+    pub enable_tailscale: Option<bool>,
+    #[serde(rename = "tailscaleAuthKey", skip_serializing_if = "Option::is_none")]
+    pub tailscale_auth_key: Option<String>,
 }
 
 impl DeploymentRequest {
@@ -36,6 +40,8 @@ impl DeploymentRequest {
             disable_user_indexes: None,
             materialized_extra_args: None,
             mz_version: None,
+            enable_tailscale: None,
+            tailscale_auth_key: None,
         }
     }
 }
